<resources>
    <string name="app_name">Score Keeper</string>
    <string name="touch_down">TOUCH DOWN</string>
    <string name="field_goal">FIELD GOAL</string>
    <string name="safety">SAFETY</string>
    <string name="extra_point">EXTRA POINT</string>
    <string name="american_football">AMERICAN FOOTBALL</string>
    <string name="reset">RESET</string>
    <string name="team_a">TEAM A</string>
    <string name="team_b">TEAM B</string>
    <string name="score">0</string>
</resources>
